quizmetricStyle.css
/* variables */

/* color pallette */
  /* #f5e1da */
  /* #f1f1f1 */
  /* #49beb7 */
  /* #085f63 */
  /* antiquewhite */

/* fonts */
/*font-family: 'EB Garamond', serif;*/
@import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');

/* section styles */
 /*all*/
 *{
    box-sizing: border-box;
 }

 body{
    background-color: #49beb7;
    background-image: linear-gradient(215deg, #085f63 0%, #49beb7 100% );
    font-family: 'EB Garamond', sans-serif;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 125vh;
    overflow: hidden;
    margin: 2px;
 }

 /*score box*/
.quiz-scoreBox{
    background-color: antiquewhite;
    border-radius: 3px;
    margin:2px;
    width: 20%;
    overflow: hidden;
    box-shadow: 0 0 5px 2px black;
    position: auto;
}

 /*quiz box*/
 .quizBox{
    background-color: #f1f1f1;
    border-radius: 10px;
    box-shadow: 0 0 5px 2px black;
    width: 70%;
    overflow: hidden;
}
 .quiz-header{
    padding: 1rem
 }
 h2{
    padding: 1rem;
    text-align: center;
    margin: 1px;
 }
 ul{
    list-style-type: none;
    padding: 0;
 }

 ul li{
    font-size: 1.3rem;
    margin: 3px;
 }

 ul li label{
    cursor: help;
 }
 button{
    display: flex;
    background-color: #085f63;
    color: #f1f1f1;
    borer: none;
    border-radius: 20%;
    width: 50%;
    cursor: pointer;
    font-size: 1.6rem;
    position: relative;
    align-items: center;
 }
 button:hover{
    background-color: #49beb7;
 }

